Project/manifests/UserService/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework8userservice
  labels:
    app: homework8userservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homework8userservice
  template:
    metadata:
      labels:
        app: homework8userservice
    spec:
      containers:
      - name: homework8userservice
        image: flash1200/homework8_userservice:firstversion
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
